--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -550,7 +550,10 @@ services:
       - redis_password
     environment:
       - REDIS_ADDR=redis://redis:6379
-    entrypoint: ["/bin/sh", "-c", "REDIS_PASSWORD=$(cat /run/secrets/redis_password) exec /redis_exporter"]
+    command:
+      - /bin/sh
+      - -c
+      - 'REDIS_PASSWORD="$$(cat /run/secrets/redis_password)" /redis_exporter'
     networks:
       - immog-network
     deploy:
