--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -459,12 +459,14 @@ services:
         condition: on-failure
         delay: 5s
         max_attempts: 5
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/api/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Healthcheck disabled - WAHA doesn't have wget/curl
+    # Session health is monitored by Laravel scheduler (waha:ensure-session)
+    # healthcheck:
+    #   test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:3000/api/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1))\""]
+    #   interval: 60s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 120s
 
   laravel-echo:
     image: oanhnn/laravel-echo-server:latest
