feat(n8n): add Docker secrets support for workflow credentials
- Create n8n entrypoint.sh to load secrets as env vars
- Add secrets: API_SERVICE_TOKEN, FCM_SERVER_KEY, SMS_API_KEY, TWILIO_*
- Configure URLs: IMMOGUINEE_API_URL, FRONTEND_URL, WAHA_URL, etc.
- Workflows can now use $env() to access all credentials securely

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -185,3 +185,16 @@ secrets:
     external: true
   reverb_app_secret:
     external: true
+  # n8n workflow secrets
+  n8n_api_service_token:
+    external: true
+  n8n_fcm_server_key:
+    external: true
+  n8n_sms_api_key:
+    external: true
+  n8n_twilio_account_sid:
+    external: true
+  n8n_twilio_auth_token:
+    external: true
+  n8n_twilio_phone_number:
+    external: true
