feat(n8n): add OpenAI, Telegram, and SMTP secrets
New secrets added:
- OPENAI_API_KEY
- TELEGRAM_BOT_TOKEN
- TELEGRAM_CHAT_ID
- SMTP_HOST, SMTP_USER, SMTP_PASSWORD

All accessible via $env() in workflows

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -198,3 +198,15 @@ secrets:
     external: true
   n8n_twilio_phone_number:
     external: true
+  n8n_openai_api_key:
+    external: true
+  n8n_telegram_bot_token:
+    external: true
+  n8n_telegram_chat_id:
+    external: true
+  n8n_smtp_host:
+    external: true
+  n8n_smtp_user:
+    external: true
+  n8n_smtp_password:
+    external: true
