--- a/docker/docker-compose.swarm.yml
+++ b/docker/docker-compose.swarm.yml
@@ -349,10 +349,9 @@ services:
   # ==============================================
   minio:
     image: minio/minio:latest
-    command: server /data --console-address ":9001"
+    entrypoint: /bin/sh -c 'export MINIO_ROOT_PASSWORD=$$(cat /run/secrets/minio_password) && minio server /data --console-address ":9001"'
     environment:
       MINIO_ROOT_USER: immoguinee
-      MINIO_ROOT_PASSWORD_FILE: /run/secrets/minio_password
     secrets:
       - minio_password
     volumes:
