--- a/docker/docker-compose.swarm.yml
+++ b/docker/docker-compose.swarm.yml
@@ -455,6 +455,11 @@ services:
       - N8N_EDITOR_BASE_URL=https://automate.immoguinee.com
       - WEBHOOK_URL=https://automate.immoguinee.com/
       - GENERIC_TIMEZONE=Africa/Conakry
+      # Enable Execute Command node (disabled by default since n8n 2.0)
+      - EXECUTIONS_DATA_PRUNE=true
+      # Activer le node Execute Command (bloque par defaut pour securite)
+      - N8N_REINSTALL_MISSING_PACKAGES=true
+      - NODES_EXCLUDE=
     secrets:
       - n8n_password
       - n8n_ssh_private_key
