fix(n8n): add X-Api-Key header to WAHA workflow calls
- send-otp-whatsapp.json: Added missing X-Api-Key header
- paiement-quittance.json: Replaced httpHeaderAuth with direct header
- signature-contrat-pdf.json: Replaced httpHeaderAuth with direct header
- All workflows now use $env.WAHA_API_KEY for authentication

--- a/n8n/workflows/send-otp-whatsapp.json
+++ b/n8n/workflows/send-otp-whatsapp.json
@@ -24,6 +24,10 @@
             {
               "name": "Content-Type",
               "value": "application/json"
+            },
+            {
+              "name": "X-Api-Key",
+              "value": "={{ $env.WAHA_API_KEY }}"
             }
           ]
         },
